# trustychip

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md
libretro-defs/: Cargo.toml  build.rs  wrapper.h
libretro-defs/src/: lib.rs
src/: callbacks.rs  constants.rs  core.rs  lib.rs  log.rs  utils.rs
src/core/: mod.rs  state.rs
