[package]
name = "trustychip"
version = "0.1.0"
authors = ["Alex Reisner <1683937+reisnera@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitvec = "1.0.0"
crossbeam-utils = "0.8.7"
either = "1.6.1"
eyre = "0.6.6"
libretro-defs = { path = "libretro-defs" }
once_cell = "1.9.0"
parking_lot = "0.12"
rand = "0.8.4"
smallvec = "1.8.0"
static_assertions = "1.1.0"
tracing = "0.1.30"

[dependencies.tracing-subscriber]
version = "0.3.8"
default-features = false
features = ["std", "fmt", "smallvec", "parking_lot"]

[workspace]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"
